k8s/DEPLOYMENT.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: resourcing-server-deploy 
spec: 
  selector: 
    matchLabels: 
      app: resourcing-server
  replicas: 1 
  template: 
    metadata: 
      labels: 
        app: resourcing-server
    spec: 
      containers: 
      - name: resourcing-server
        image: gaya902008/resourcing-server:BUILDNUM 
        ports: 
        - containerPort: 4000
